--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-<html>Unknow.sk</html>
+<!DOCTYPE html>
+<html lang="sk" class="w-100 h-100 m-0 p-0">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Komunita zastrešujúca domáce StartUpy a Open Source riešenia.">
+    <meta name="author" content="Unknow.sk">
+    <link rel="shortcut icon" href="favicon.ico">
+    <title>Unknow.sk</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+</head>
+<body class="w-100 h-100 m-0 p-0"
+      style="background: url('https://source.unsplash.com/random/1920x1080?source%20code') no-repeat;">
+<main class="w-100 h-100 m-0 p-0 overflow-hidden">
+
+    <div class="d-flex flex-column justify-content-center flex-fill h-75" style="opacity: .75; background: url('/logo_dark.svg') center no-repeat ; background-size: contain">
+        <img class="w-auto h-100" style="opacity: .9;" src="/logo_light.svg" alt="Unknow.sk">
+        <h1 class="h3 mb-3 fw-normal d-flex justify-content-center d-none">Unknow.sk</h1>
+    </div>
+    <div class="d-flex flex-row justify-content-center flex-fill">
+        <div class="p-2 flex-column">
+            <a class="w-100 btn btn-secondary" href="https://ip.unknow.sk/" target="_blank">IP</a>
+        </div>
+        <div class="p-2 flex-column">
+            <a class="w-100 btn btn-secondary" href="https://ssl.unknow.sk/" target="_blank">SSL</a>
+        </div>
+        <div class="p-2 flex-column">
+            <a class="w-100 btn btn-secondary" href="https://spajza.unknow.sk/" target="_blank">Špajza</a>
+        </div>
+        <div class="p-2 flex-column">
+            <a class="w-100 btn btn-secondary" href="https://kcontrol.unknow.sk/" target="_blank">K_CONTROL</a>
+        </div>
+    </div>
+    <p class="mt-5 mb-3 d-flex flex-row text-secondary justify-content-center">&copy; 2008–2023</p>
+</main>
+</body>
+</html>
