--- a/index.html
+++ b/index.html
@@ -1,32 +1,62 @@
 <!DOCTYPE html>
-<html lang="sk" class="w-100 h-100 m-0 p-0">
+<html lang="sk">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Komunita zastrešujúca domáce StartUpy a Open Source riešenia.">
-    <meta name="author" content="Unknow.sk">
-    <link rel="shortcut icon" href="favicon.ico">
-    <title>Unknow.sk</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Unknow</title>
+    <meta name="description" content="Unknow">
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
+    <link rel="stylesheet" href="css/custom.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/aos.css">
+    <link rel="javascript" href="js/particles.js">
 </head>
-<body class="w-100 h-100 m-0 p-0"
-      style="background: url('https://source.unsplash.com/random/1920x1080?source%20code') no-repeat;">
-<main class="w-100 h-100 m-0 p-0 overflow-hidden">
-
-    <div class="d-flex flex-column justify-content-center flex-fill h-75" style="opacity: .75; background: url('/logo_dark.svg') center no-repeat ; background-size: contain">
-        <img class="w-auto h-100" style="opacity: .9;" src="/logo_light.svg" alt="Unknow.sk">
-        <h1 class="h3 mb-3 fw-normal d-flex justify-content-center d-none">Unknow.sk</h1>
-    </div>
-    <div class="d-flex flex-row justify-content-center flex-fill">
-        <div class="p-2 flex-column">
-            <a class="w-100 btn btn-secondary" href="https://ip.unknow.sk/" target="_blank">IP</a>
+<body>
+    <div class="jumbotron jumbotron-fluid" id="banner" style="background: url('https://source.unsplash.com/random/1920x1080?source%20code') no-repeat;">
+        <div class="container text-center text-md-left div">
+            <header>
+                <div class="row justify-content-between">
+                    <div data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="col-2 py-3">
+                        <img src="img/logo.png" alt="logo">
+                    </div>
+                </div>
+            </header>
+            <h1 data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="display-3 text-white font-weight-bold my-4">
+            	Komunita zastrešujúca domáce StartUpy a Open&nbsp;Source riešenia
+            </h1>
+            <p data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="lead text-white my-4">
+                Našou úlohou jé pomáhať tým, ktorí majú zaujímavú myšlienku, no nevedia nájsť zdroje pre svoj projekt, či&nbsp;už&nbsp;sa&nbsp;jedná o zdroje informačné, ľudské alebo finančné.
+            </p>
+            <a href="mailto:unknow@unknow.sk" data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="btn my-4 font-weight-bold unknow-cta cta-green">Kontaktujte nás</a>
         </div>
-        <div class="p-2 flex-column">
-            <a class="w-100 btn btn-secondary" href="https://ssl.unknow.sk/" target="_blank">SSL</a>
+    </div>
+    <div class="container my-5 py-2">
+        <div class="row">
+            <div data-aos="fade-up" data-aos-delay="0" data-aos-duration="1000" data-aos-once="true" class="col-md-6 text-center">
+                <a href="https://ssl.unknow.sk/" target="_blank"><img src="img/ip.png" alt="Anti-spam" class="mx-auto zoom"></a>
+                <h4>Moja IP</h4>
+                <p>Overte vašu IP adresu</p>
+            </div>
+            <div data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000" data-aos-once="true" class="col-md-6 text-center">
+                <a href="https://ip.unknow.sk/" target="_blank"><img src="img/ssl.png" alt="Smart Scan" class="mx-auto zoom"></a>
+                <h4>SSL overovač</h4>
+                <p>Overte váš SSL certifikát</p>
+            </div>
         </div>
     </div>
-    <p class="mt-5 mb-3 d-flex flex-row text-secondary justify-content-center">&copy; 2008–2023</p>
-</main>
+	<div id="copyright">
+        <div class="container">
+            <div class="row justify-content-center">
+            	<div class="text-white">
+                    Unknow.sk &copy; 2008-2023
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="js/aos.js"></script>
+    <script>
+      AOS.init({
+      });
+    </script>
 </body>
 </html>
