--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="javascript" href="js/particles.js">
 </head>
 <body>
-    <div class="jumbotron jumbotron-fluid" id="banner" style="background: url('https://source.unsplash.com/random/1920x1080?source%20code') no-repeat;">
+    <div class="jumbotron jumbotron-fluid" id="banner">
         <div class="container text-center text-md-left div">
             <header>
                 <div class="row justify-content-between">
