--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
     <div class="container my-5 py-2">
         <div class="row">
             <div data-aos="fade-up" data-aos-delay="0" data-aos-duration="1000" data-aos-once="true" class="col-md-6 text-center">
-                <a href="https://ssl.unknow.sk/" target="_blank"><img src="img/ip.png" alt="Anti-spam" class="mx-auto zoom"></a>
+                <a href="https://ip.unknow.sk/" target="_blank"><img src="img/ip.png" alt="Anti-spam" class="mx-auto zoom"></a>
                 <h4>Moja IP</h4>
-                <p>Overte vašu IP adresu</p>
+                <p>Zistite si Vašu IP adresu</p>
             </div>
             <div data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000" data-aos-once="true" class="col-md-6 text-center">
-                <a href="https://ip.unknow.sk/" target="_blank"><img src="img/ssl.png" alt="Smart Scan" class="mx-auto zoom"></a>
+                <a href="https://ssl.unknow.sk/" target="_blank"><img src="img/ssl.png" alt="Smart Scan" class="mx-auto zoom"></a>
                 <h4>SSL overovač</h4>
-                <p>Overte váš SSL certifikát</p>
+                <p>Overte SSL certifikát pre doménu</p>
             </div>
         </div>
     </div>
