--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a href="mailto:unknow@unknow.sk" data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="btn my-4 font-weight-bold unknow-cta cta-green">Kontaktujte nás</a>
         </div>
     </div>
-    <div class="container my-5 py-2">
+<!--     <div class="container my-5 py-2">
         <div class="row">
             <div data-aos="fade-up" data-aos-delay="0" data-aos-duration="1000" data-aos-once="true" class="col-md-6 text-center">
                 <a href="https://ip.unknow.sk/" target="_blank"><img src="img/ip.png" alt="Anti-spam" class="mx-auto zoom"></a>
@@ -43,7 +43,7 @@
                 <p>Overte SSL certifikát pre doménu</p>
             </div>
         </div>
-    </div>
+    </div> -->
 	<div id="copyright">
         <div class="container">
             <div class="row justify-content-center">
